# OpenLRM

./: pyproject.toml  requirements.txt
openlrm/datasets/: cam_utils.py
openlrm/models/: block.py  modeling_lrm.py  transformer.py
openlrm/models/encoders/: dinov2_wrapper.py
openlrm/models/rendering/: synthesizer.py
openlrm/models/rendering/utils/: ray_sampler.py
openlrm/runners/infer/: lrm.py
openlrm/utils/: hf_hub.py  preprocess.py  registry.py
